kube-hw/13-kubconfig-03-config/manifest/2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/nginx/certs
              readOnly: true
            - name: config-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: tls-certs
          secret:
            secretName: nginx-secret
        - name: config-volume
          configMap:
            name: my-config


---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
