kube-hw/13-kubconfig-03-config/manifest/2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
    - hosts:
      - netology.nick.com  
      secretName: my-secret 
  rules:
    - host: netology.nik.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 443
